--- a/data/web/react-app/package.json
+++ b/data/web/react-app/package.json
@@ -9,7 +9,8 @@
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "mock-rest-server": "^1.2.0"
   },
   "browserslist": {
     "production": [
